<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_image">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_friend_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/smallBlue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <EditText
            android:id="@+id/searchFriendPhoneText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:hint="@string/find_friend_by_phone"
            android:textSize="18sp"
            android:inputType="phone"
            android:clickable="true"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/searchFriendBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/smallBlue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/search_friend_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchResultLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/searchFriendImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/user_image_big"
                />
            <TextView
                android:id="@+id/searchFriendNickName"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/search_friend_name"/>

            <TextView
                android:id="@+id/searchFriendName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/search_friend_sex"/>

            <TextView
                android:id="@+id/searchFriendSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/search_friend_phone"/>

            <TextView
                android:id="@+id/searchFriendPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/search_friend_email"/>

            <TextView
                android:id="@+id/searchFriendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <Button
                android:id="@+id/addFriendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/smallBlue"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/add_search_friend"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>